@@ -5,3 +5,4 @@
 
 13/07/2025:
 	Added ListBox containing the current songs in the playlist, songs can be clicked on to play them
+	Added tooltips
